Add Frontend for Movies and Actors, update backend
